@@ -46,7 +46,7 @@ public class ChangeColorProposeInitiator extends ProposeInitiator {
     private List<String> getAllAgentsNames(){
         try {
             SearchConstraints c = new SearchConstraints();
-            c.setMaxResults(new Long(-1));
+            c.setMaxResults(Long.valueOf(-1));
             AMSAgentDescription[] agents = AMSService.search(myAgent, new AMSAgentDescription(), c);
             List<String> names = new ArrayList<>();
             for (AMSAgentDescription agentDescription : agents){
